src/App.css
a, a:visited {
  text-decoration: none;
  color: black;
}

/* --------------------------------- */

.menuBar {
  position: fixed;
  display: flex;
  justify-content: space-between;
  top: 0;
  left: 0;
  width: 100%;
  height: 64px;
  flex-shrink: 0;
  background: #EAE3D4;
  color: black;
}

.menuNavHeaders {
  font-size: 22px;
  font-family: "Kulim Park";
  font-weight: 400;
  padding-top: 19px;
  margin-left: 30px;
  min-width: 102px;
}

/* --------------------------------- */

.aboutMeContainer {
  display: flex;
  width: 100%;
  height: 323px;
  padding: 0px 80px;
  padding-top: 149px;
  justify-content: center;
  align-items: center;
  gap: 100px;
  flex-shrink: 0;
} 

.aboutMeListContainer {
  display: flex;
  width: 561px;
  flex-direction: column;
  align-items: flex-start;
  gap: 15px;
}

.aboutMeImageContainer {
  display: flex;
  width: 63px;
  flex-direction: column;
  align-items: center;
  gap: 15px;
}

.aboutMeText {
  font-family: Lato;
  font-size: 18px;
  font-weight: 400;
  font-family: Lato;
  text-align: left;
}

.aboutMeImages {
  height: 40px;
}

/* --------------------------------- */

.headingContainer {
  display: inline-flex;
  align-items: center;
  gap: 19px;
  
}

.h1 {
  font-family: Lato;
  font-size: 42px;
  font-weight: 700;
}

.line {
  display: inline-flex;
  width: 520px;
  height: 1px; 
  background-color: #000;
}

/* --------------------------------- */

.portfolioHeaderContainer {
  width: 270px;
  height: 360px;
  display: flex;
  border-radius: 12px;
  background: var(--block, #FFF8EA);
  font-family: "Kulim Park";
  font-size: 22px;
  font-weight: 400;
  justify-content: center;
  align-items: center;
  padding: 0 48px;
  box-sizing: border-box;
}

.portfolioHeaderText {
  font-family: "Kulim Park";
  font-size: 24px;
  font-weight: 400;
}

.porfolioItemContainer {
  display: flex;
}

.portoflioImage {
  height: 328px;
}

/* --------------------------------- */

.connectContainer {
  display: inline-flex;
  align-items: center;
  gap: 45px;
  padding-bottom: 50px;
}

.connectImages {
  width: 80px;
  height: 80px;
}

.connectImageCaption {
  margin-left: 10px;
  font-family: "PT Sans Caption";
}

.connectCaptionContainer{
  display: flex;
  align-items: center;
}

/* --------------------------------- */

.App {
  background: white;
  text-align: center;
  color: black;
}

.App-header {
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

